--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -283,4 +283,7 @@
   <data name="importante" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\importante.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="i" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\i.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
